<resources>
    <string name="count_name">Data Activity</string>
    <string name="settings_name">Settings Activity</string>

    <string name="eventa">Event A</string>
    <string name="eventb">Event B</string>
    <string name="eventc">Event C</string>
    <string name="count">Count</string>
    <string name="countNum">Show my count: 0</string>
    <string name="settings">Settings</string>
    <string name="saveButton">Save</string>




    <string name="setting_activities">Setting Activities</string>
    <string name="counter1_name">Counter 1 Name</string>
    <string name="counter2_name">Counter 2 Name</string>
    <string name="counter3_name">Counter 3 Name</string>
    <string name="max_counts"> Maximum Counts </string>
    <string name="numberOfCountsPhrase"> Total Count :  </string>

    <string name="eAtext"> Event a :  </string>
    <string name="eBtext"> Event b :  </string>
    <string name="eCtext"> Event c :  </string>
    <string name="total"> Total Events :  </string>

    <string name="hintEvents"> Name goes here </string>
    <string name="hintMax"> Max count goes here:  </string>

    <string name="app_name">ListDisplay</string>
    <string name="action_settings">Settings</string>





</resources>